--- a/GBNManager/GBNManager.csproj
+++ b/GBNManager/GBNManager.csproj
@@ -46,6 +46,7 @@
     <Compile Include="GBIN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructStream.cs" />
+    <Compile Include="TextData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
